# chezz

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_old.md  SConstruct  chezz.gdextension  chezz.gdextension.uid  kingpresets.json  project.godot  requirements.txt
lib/include/: Archer.hpp  Bishop.hpp  Board.hpp  Button.hpp  Crook.hpp  FileManager.hpp  GameStateManager.hpp  Gametree.hpp  Horse.hpp  IGameObject.hpp  IGameState.hpp  IPiece.hpp  IStatePlayable.hpp  Pawn.hpp  PieceInstantiator.hpp  Portal.hpp  Queen.hpp  ScreenTransition.hpp  SoundManager.hpp  SpriteManager.hpp  StateGameplay.hpp  StateMainMenu.hpp  StatePractice.hpp  StateStats.hpp  StateTutorial.hpp  StateVersus.hpp  Stats.hpp  Tower.hpp  Trapper.hpp
lib/src/: Archer.cpp  Bishop.cpp  Board.cpp  Button.cpp  Crook.cpp  FileManager.cpp  GameStateManager.cpp  Gametree.cpp  Horse.cpp  IGameObject.cpp  IGameState.cpp  IPiece.cpp  IStatePlayable.cpp  Pawn.cpp  PieceInstantiator.cpp  Portal.cpp  Queen.cpp  ScreenTransition.cpp  SoundManager.cpp  SpriteManager.cpp  StateGameplay.cpp  StateMainMenu.cpp  StatePractice.cpp  StateStats.cpp  StateTutorial.cpp  StateVersus.cpp  Stats.cpp  Tower.cpp  Trapper.cpp
scenes/: juego.tscn  menu_inicial.tscn  tablero.tscn
scenes/Pieces/: alfil_blanco.tscn  alfil_negro.tscn  arquero_blanco.tscn  (+18 more)
scripts/: indicador.gd  indicador.gd.uid  juego.gd  juego.gd.uid  leccion_final.gd  leccion_final.gd.uid  menu_inicial.gd  menu_inicial.gd.uid  movimiento.gd  movimiento.gd.uid  tutorial_info.gd  tutorial_info.gd.uid
src/: main.cpp  register_types.cpp  register_types.h
(+23 files in other folders)
